--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_sms:
-  permission_handler: ^10.4.0
 
+  firebase_core: ^2.15.1
+  flutter_keyboard_visibility: ^5.4.1
+  cloud_firestore: ^4.9.0
+  shared_preferences: ^2.2.0
+  slide_to_act: ^2.0.1
+  intl: ^0.18.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -75,17 +79,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+     - family: NexaBold
+       fonts:
+         - asset: Login/fonts/Nexa Bold.otf
+     - family: NexaRegular
+       fonts:
+         - asset: Login/fonts/NexaRegular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
